Fixed Spacing and Lines

--- a/hours-and-location.css
+++ b/hours-and-location.css
@@ -15,7 +15,7 @@ body{
 }
 .hours-and-location-item{
     width: 35.5vw;
-    height: 48vh;
+    height: 58vh;
     text-align: center;
     background-color: black;
     justify-content: center;
@@ -28,13 +28,19 @@ body{
     padding: 0;
     margin: 0;
 }
-.hours-and-location-item > h1{
+/*.hours-and-location-item > h1{
     text-decoration: underline;
-}
-#hours-and-location-border{
-    border: 3px double white;
+}*/
+.hours-and-location-border{
+    border: 3.5px double #eb19b0;
     margin-left:8vw;
     margin-right:8vw;
+}
+#long-border{
+    border: 3.5px double #eb19b0;
+    margin-left:8vw;
+    margin-right:8vw;
+    margin-top: -1.5vh;
 }
 iframe.gmaps{
     width: 99.9%; 
